--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-contacts",
-  "main": "contacts.js",
+  "name": "nativescript-extra-call",
+  "main": "extra-call.js",
   "version": "0.0.1",
   "dependencies": {
     "tns-core-modules": "^1.7.1"
