--- a/demo/package.json
+++ b/demo/package.json
@@ -1,13 +1,22 @@
 {
-	"nativescript": {
-		"id": "br.com.mobilemind.demo",
-		"tns-ios": {
-			"version": "1.7.0"
-		}
-	},
-	"dependencies": {
-		"nativescript-extra-call": "file:../../nativescript-extra-call",
-		"nativescript-contacts": "1.5.0",
-		"tns-core-modules": "1.7.1"
-	}
+  "nativescript": {
+    "id": "org.nativescript.demo",
+    "tns-ios": {
+      "version": "3.0.0"
+    },
+    "tns-android": {
+      "version": "3.0.0"
+    }
+  },
+  "dependencies": {
+    "nativescript-extra-call": "file:/ns-app/app",
+    "nativescript-contacts": "^1.5.0",
+    "tns-core-modules": "^3.0.0"
+  },
+  "devDependencies": {
+    "babel-traverse": "6.24.1",
+    "babel-types": "6.24.1",
+    "babylon": "6.17.1",
+    "lazy": "1.0.11"
+  }
 }
