--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-extra-call",
-  "main": "extra-call.js",
+  "main": "index.js",
   "version": "0.0.1",
   "nativescript": {
     "platforms": {
